--- a/index.html
+++ b/index.html
@@ -10,125 +10,125 @@
   <body>
     <div class="container">
       <div class="word">
-        <span class="whyWLetter">w</span>
-        <span class="whyHLetter">h</span>
-        <span class="whyYLetter">y</span>
+        <span class="whyWLetter bold">w</span>
+        <span class="whyHLetter bold">h</span>
+        <span class="whyYLetter normal">y</span>
       </div>
       <div class="word">
-        <span class="didDLetter">d</span>
-        <span class="didILetter">i</span>
-        <span class="didDTwoLetter">d</span>
+        <span class="didDLetter bold">d</span>
+        <span class="didILetter normal">i</span>
+        <span class="didDTwoLetter bold">d</span>
       </div>
       <div class="word">
-        <span class="theTLetter">t</span>
-        <span class="theHLetter">h</span>
-        <span class="theELetter">e</span>
+        <span class="theTLetter four-hundred">t</span>
+        <span class="theHLetter normal">h</span>
+        <span class="theELetter seven-hundred">e</span>
       </div>
       <div class="word">
-        <span class="frontendFLetter">f</span>
-        <span class="frontendRLetter">r</span>
-        <span class="frontendOLetter">o</span>
-        <span class="frontendNLetter">n</span>
-        <span class="frontendTLetter">t</span>
-        <span class="hyphen">-</span>
-        <span class="frontendELetter">e</span>
-        <span class="frontendNTwoLetter">n</span>
-        <span class="frontendDLetter">d</span>
+        <span class="frontendFLetter bold">f</span>
+        <span class="frontendRLetter normal">r</span>
+        <span class="frontendOLetter normal">o</span>
+        <span class="frontendNLetter normal">n</span>
+        <span class="frontendTLetter four-hundred">t</span>
+        <span class="hyphen seven-hundred symbol">-</span>
+        <span class="frontendELetter four-hundred">e</span>
+        <span class="frontendNTwoLetter four-hundred">n</span>
+        <span class="frontendDLetter normal">d</span>
       </div>
       <div class="word">
-        <span class="developerDLetter">d</span>
-        <span class="developerELetter">e</span>
-        <span class="developerVLetter">v</span>
-        <span class="developerETwoLetter">e</span>
-        <span class="developerLLetter">l</span>
-        <span class="developerOLetter">o</span>
-        <span class="developerPLetter">p</span>
-        <span class="developerEThreeLetter">e</span>
-        <span class="developerRLetter">r</span>
+        <span class="developerDLetter bold">d</span>
+        <span class="developerELetter bold">e</span>
+        <span class="developerVLetter seven-hundred">v</span>
+        <span class="developerETwoLetter normal">e</span>
+        <span class="developerLLetter bold">l</span>
+        <span class="developerOLetter normal">o</span>
+        <span class="developerPLetter bold">p</span>
+        <span class="developerEThreeLetter bold">e</span>
+        <span class="developerRLetter four-hundred">r</span>
       </div>
       <div class="word">
-        <span class="takeTLetter">t</span>
-        <span class="takeALetter">a</span>
-        <span class="takeKLetter">k</span>
-        <span class="takeELetter">e</span>
+        <span class="takeTLetter four-hundred">t</span>
+        <span class="takeALetter normal">a</span>
+        <span class="takeKLetter bold">k</span>
+        <span class="takeELetter normal">e</span>
       </div>
       <div class="word">
-        <span class="upULetter">u</span>
-        <span class="upPLetter">p</span>
+        <span class="upULetter four-hundred">u</span>
+        <span class="upPLetter seven-hundred">p</span>
       </div>
       <div class="word">
-        <span class="gardeningGLetter">g</span>
-        <span class="gardeningALetter">a</span>
-        <span class="gardeningRLetter">r</span>
-        <span class="gardeningDLetter">d</span>
-        <span class="gardeningELetter">e</span>
-        <span class="gardeningNLetter">n</span>
-        <span class="gardeningILetter">i</span>
-        <span class="gardeningNTwoLetter">n</span>
-        <span class="gardeningGTwoLetter">g</span>
+        <span class="gardeningGLetter bold">g</span>
+        <span class="gardeningALetter bold">a</span>
+        <span class="gardeningRLetter bold">r</span>
+        <span class="gardeningDLetter normal">d</span>
+        <span class="gardeningELetter seven-hundred">e</span>
+        <span class="gardeningNLetter four-hundred">n</span>
+        <span class="gardeningILetter normal">i</span>
+        <span class="gardeningNTwoLetter bold">n</span>
+        <span class="gardeningGTwoLetter bold">g</span>
       </div>
       <div class="word">
-        <span class="question-mark">?</span>
+        <span class="question-mark four-hundred symbol">?</span>
       </div>
       <div class="word">
-        <span class="becauseBLetter">b</span>
-        <span class="becauseELetter">e</span>
-        <span class="becauseCLetter">c</span>
-        <span class="becauseALetter">a</span>
-        <span class="becauseULetter">u</span>
-        <span class="becauseSLetter">s</span>
-        <span class="becauseETwoLetter">e</span>
+        <span class="becauseBLetter bold">b</span>
+        <span class="becauseELetter bold">e</span>
+        <span class="becauseCLetter normal">c</span>
+        <span class="becauseALetter normal">a</span>
+        <span class="becauseULetter bold">u</span>
+        <span class="becauseSLetter seven-hundred">s</span>
+        <span class="becauseETwoLetter seven-hundred">e</span>
       </div>
       <div class="word">
-        <span class="theyTLetter">t</span>
-        <span class="theyHLetter">h</span>
-        <span class="theyELetter">e</span>
-        <span class="theyYLetter">y</span>
+        <span class="theyTLetter bold">t</span>
+        <span class="theyHLetter normal">h</span>
+        <span class="theyELetter bold">e</span>
+        <span class="theyYLetter normal">y</span>
       </div>
       <div class="word">
-        <span class="wantedWLetter">w</span>
-        <span class="wantedALetter">a</span>
-        <span class="wantedNLetter">n</span>
-        <span class="wantedTLetter">t</span>
-        <span class="wantedELetter">e</span>
-        <span class="wantedDLetter">d</span>
+        <span class="wantedWLetter four-hundred">w</span>
+        <span class="wantedALetter normal">a</span>
+        <span class="wantedNLetter seven-hundred">n</span>
+        <span class="wantedTLetter seven-hundred">t</span>
+        <span class="wantedELetter bold">e</span>
+        <span class="wantedDLetter bold">d</span>
       </div>
       <div class="word">
-        <span class="toTLetter">t</span>
-        <span class="toOLetter">o</span>
+        <span class="toTLetter normal">t</span>
+        <span class="toOLetter normal">o</span>
       </div>
       <div class="word">
-        <span class="improveILetter">i</span>
-        <span class="improveMLetter">m</span>
-        <span class="improvePLetter">p</span>
-        <span class="improveRLetter">r</span>
-        <span class="improveOLetter">o</span>
-        <span class="improveVLetter">v</span>
-        <span class="improveELetter">e</span>
+        <span class="improveILetter bold">i</span>
+        <span class="improveMLetter four-hundred">m</span>
+        <span class="improvePLetter seven-hundred">p</span>
+        <span class="improveRLetter normal">r</span>
+        <span class="improveOLetter normal">o</span>
+        <span class="improveVLetter bold">v</span>
+        <span class="improveELetter bold">e</span>
       </div>
       <div class="word">
-        <span class="theirTLetter">t</span>
-        <span class="theirHLetter">h</span>
-        <span class="theirELetter">e</span>
-        <span class="theirILetter">i</span>
-        <span class="theirRLetter">r</span>
+        <span class="theirTLetter four-hundred">t</span>
+        <span class="theirHLetter normal">h</span>
+        <span class="theirELetter normal">e</span>
+        <span class="theirILetter normal">i</span>
+        <span class="theirRLetter bold">r</span>
       </div>
       <div class="word">
-        <span class="rootRLetter">r</span>
-        <span class="rootOLetter">o</span>
-        <span class="rootOTwoLetter">o</span>
-        <span class="rootTLetter">t</span>
+        <span class="rootRLetter bold">r</span>
+        <span class="rootOLetter bold">o</span>
+        <span class="rootOTwoLetter four-hundred">o</span>
+        <span class="rootTLetter seven-hundred">t</span>
       </div>
       <div class="word">
-        <span class="skillsSLetter">s</span>
-        <span class="skillsKLetter">k</span>
-        <span class="skillsILetter">i</span>
-        <span class="skillsLLetter">l</span>
-        <span class="skillsLTwoLetter">l</span>
-        <span class="skillsSTwoLetter">s</span>
+        <span class="skillsSLetter normal">s</span>
+        <span class="skillsKLetter bold">k</span>
+        <span class="skillsILetter bold">i</span>
+        <span class="skillsLLetter seven-hundred">l</span>
+        <span class="skillsLTwoLetter seven-hundred">l</span>
+        <span class="skillsSTwoLetter four-hundred">s</span>
       </div>
       <div class="word">
-        <span class="exclamation-mark">!</span>
+        <span class="exclamation-mark four-hundred symbol">!</span>
       </div>
     </div>
   </body>
